2009-11-10  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/ipa-sra-2.c: Use calloc instead of malloc.
	* gcc.dg/pr41963.c: Do not include math.h.  Declare fabsf manually.

2009-11-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/compile/pr41987.c: New.

2009-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40946
	* gcc.dg/pr40946.c: New test.

2009-11-09  Jason Merrill  <jason@redhat.com>

	PR c++/41972
	* g++.dg/template/ref4.C: New.

	PR c++/41994
	* g++.dg/template/conv10.C: New.

2009-11-07  Jason Merrill  <jason@redhat.com>

	PR c++/37920
	* g++.dg/ext/typeof11.C: New.

2009-11-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/41985
	* gcc.target/i386/pr41985.c: New test.

2009-11-08  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/torture/pta-escape-1.c: New testcase.

2009-11-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/rep_clause4.adb: New test.

2009-11-08  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/41928
	* gfortran.dg/pr41928.f90: New testcase.

2009-11-07  Jason Merrill  <jason@redhat.com>

	PR c++/18451
	PR c++/40738
	* g++.dg/parse/error36.C: Add parameter and template cases.
	* g++.dg/cpp0x/variadic-ex1.C: Update expected errors.
	* g++.dg/ext/typedef-init.C: Likewise.
	* g++.dg/lookup/hidden-class1.C: Likewise.
	* g++.dg/lookup/hidden-class10.C: Likewise.
	* g++.dg/lookup/hidden-class5.C: Likewise.
	* g++.dg/lookup/hidden-class7.C: Likewise.
	* g++.dg/lookup/hidden-temp-class1.C: Likewise.
	* g++.dg/lookup/hidden-temp-class4.C: Likewise.
	* g++.dg/lookup/hidden-temp-class7.C: Likewise.
	* g++.dg/lookup/strong-using-2.C: Likewise.
	* g++.dg/other/typedef1.C: Likewise.
	* g++.dg/parse/access10.C: Likewise.
	* g++.dg/parse/constructor1.C: Likewise.
	* g++.dg/parse/crash38.C: Likewise.
	* g++.dg/parse/error3.C: Likewise.
	* g++.dg/parse/typespec1.C: Likewise.
	* g++.dg/template/typedef5.C: Likewise.
	* g++.old-deja/g++.pt/typename3.C: Likewise.